<resources>
    <string name="app_name">Health</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="health">Health</string>
    <string name="dont_have_account_sign_up">Dont Have Account? Sign Up</string>
    <string name="action_settings">action settings</string>

    <string name="home">Home</string>
    <string name="user_details">User Details</string>

    <string name="insurance">Insurance</string>
    <string name="user_profile">User Profile</string>
    <string name="location">Location</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="user_gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Decline to state</item>
    </string-array>

    <string-array name="bloodGroup">
        <item>Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
        <item>Unknown</item>
    </string-array>
    <string name="title_activity_get_started">GetStarted</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_password_confirm">Password Confirm</string>
    <string name="register_account">Register Account</string>
    <string name="already_have_account_sign_in">Already have account Sign In</string>
    <string name="todo">TODO</string>
    <string name="enter_notification_message">Enter notification message</string>
    <string name="name_1">Name 1</string>
    <string name="fire_burns">Fire Burns</string>
    <string name="nose_breeding">Nose Breeding</string>
    <string name="fainting">Fainting</string>
    <string name="user_name">User Name</string>
    <string name="blood_type">Blood Type:</string>
    <string name="hold" />
    <string name="gender">Gender</string>
    <string name="True">true</string>
    <string name="name2">Name2</string>
    <string name="name_3">Name 3</string>
    <string name="name_4">Name 4</string>
    <string name="medical_conditions">Medical Conditions</string>
    <string name="medical_allergies">Medical Allergies</string>
    <string name="other_allergies">Other Allergies</string>
    <string name="insurance_details">Insurance Details</string>
    <string name="id_number">Id Number</string>
    <string name="company_cover">Company Cover</string>
    <string name="get_started">Get Started</string>
    <string name="to_help_you_get_started_with_this_app_take_a_look_here_all_details_are_well_explained">To help you get started with this app take a look here. All details are well explained.</string>
    <string name="first_aid_tips">First Aid Tips</string>
    <string name="your_number_one_alert_app">Your Number One Alert App</string>
    <string name="deliver_baby">Deliver Baby</string>
    <string name="to_get_started_n_watch_the_video_below">To Get Started   Watch the video below</string>
    <string name="medicalBackground">Medical Background</string>
    <string name="update">Update</string>
    <string name="emergencyContacts">Emergency Contacts</string>
    <string name="contactNumber">Contact number</string>
    <string name="medical_insurance">Medical Insurance</string>
    <string name="medical_profile">Medical Profile</string>
    <string name="basic_user_info">Basic User Info</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_state_any_pre_existing_medical_conditions_you_have">Please state any pre-existing medical conditions you have</string>
    <string name="state_medications_you_are_allergic_to">State medications you are allergic to</string>
    <string name="state_other_allergies">State other allergies</string>
    <string name="medical_cover">Medical Cover</string>
    <string name="this_section_is_optional">This section is optional</string>
    <string name="national_id">National Id</string>
    <string name="company_insuranced">Company Insuranced</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="bloodtype">BloodType</string>
    <string name="age">Age</string>
    <string name="policy_number">Policy Number</string>
    <string name="preferred_hospital">Preferred Hospital</string>
    <string name="emergency_contact_name_three">Emergency Contact Name Three</string>
    <string name="emergency_contact_name_two">Emergency Contact Name Two</string>
    <string name="contact_number">Contact number</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="step_2_please_provide_emergency_contacts">Step 2: Please Provide Emergency Contacts</string>
    <string name="emergency_contacts">Emergency Contacts</string>

</resources>


