<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_sign_up"
    tools:context="com.example.alice.health.SignUpActivity">

    <!-- signup progress -->
    <ProgressBar
        android:id="@+id/signup_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/login_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_account"
                android:layout_marginTop="60dp"
                android:textColor="@color/colorIcons"
                android:textAlignment="center"
                android:textSize="32sp"/>

            <ImageView
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:src="@drawable/health_logo"
                android:layout_centerInParent="true"
                android:layout_below="@id/login_app_name"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_below="@+id/login_app_name"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_bg"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry" />



                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_bg"
                    android:layout_marginTop="7dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:background="@drawable/input_bg"
                    android:maxLines="1"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:hint="@string/prompt_password_confirm"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:background="@drawable/input_bg"
                    android:maxLines="1"
                    tools:ignore="RtlSymmetry" />


                <Button
                    android:id="@+id/email_sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorIcons"
                    android:background="@drawable/login_btn_bg"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/signup_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorIcons"
                    android:text="@string/already_have_account_sign_in"/>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>



