<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/login_sign_up"
    tools:context="com.example.alice.health.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/login_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:layout_marginTop="60dp"
                android:textColor="@color/colorIcons"
                android:textAlignment="center"
                android:textSize="32sp"/>

            <ImageView
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:src="@drawable/health_logo"
                android:layout_centerInParent="true"
                android:layout_below="@id/login_app_name"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_below="@id/login_app_name"
                android:orientation="vertical">



                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_bg"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:background="@drawable/input_bg"
                    android:maxLines="1"
                    tools:ignore="RtlSymmetry" />


                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorIcons"
                    android:background="@drawable/login_btn_bg"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/login_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorIcons"
                    android:text="@string/dont_have_account_sign_up"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
