<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alice.health.MedicalDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearLayout"
                tools:ignore="ObsoleteLayoutParam">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medical_profile"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_above="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/basic_user_info"
                    android:id="@+id/registerTextView"
                    android:layout_marginBottom="4dp"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/userFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/full_name"
                    android:nextFocusDown="@+id/userAge"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorDivider"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/userPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/phone_number"
                    android:nextFocusDown="@+id/gender_spinner"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorDivider"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/userAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/age"
                    android:nextFocusDown="@+id/gender_spinner"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorDivider"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"/>


                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_spinner"
                    android:nextFocusDown="@+id/bloodGroup_Spinner"
                    android:background="@android:color/white"
                    android:entries="@array/user_gender"
                    android:textColorHint="@color/colorDivider"
                    android:padding="11dp"
                    android:layout_marginBottom="5dp">
                </android.support.v7.widget.AppCompatSpinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/medicalBackground"
                    android:layout_marginBottom="4dp"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="9dp"
                    android:background="@color/colorPrimaryDark"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bloodGroup_Spinner"
                    android:background="@android:color/white"
                    android:entries="@array/bloodGroup"
                    android:textColorHint="@color/colorDivider"
                    android:padding="11dp"
                    android:layout_marginBottom="10dp">

                </android.support.v7.widget.AppCompatSpinner>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/userMedicalConditions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:hint="@string/please_state_any_pre_existing_medical_conditions_you_have"
                        android:nextFocusDown="@+id/userAddMedBtn"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorDivider"
                        android:textSize="20sp"
                        android:inputType="textMultiLine"
                        android:layout_marginBottom="10dp" />

                </android.support.v7.widget.LinearLayoutCompat>

                <EditText
                    android:id="@+id/userMedAllergies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/state_medications_you_are_allergic_to"
                    android:nextFocusDown="@+id/userAddMedBtn"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorDivider"
                    android:textSize="20sp"
                    android:inputType="textMultiLine"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:id="@+id/userAllergies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/state_other_allergies"
                    android:nextFocusDown="@+id/userAddMedBtn"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorDivider"
                    android:textSize="20sp"
                    android:inputType="textMultiLine"
                    android:layout_marginBottom="10dp" />

                <Button
                    android:id="@+id/userMedicalBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/submit"
                    android:background="@color/flatui_midnight_blue"
                    android:layout_marginTop="15dp"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</FrameLayout>


