<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alice.health.GetStartedIntoFragmentActivity">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/get_started_top"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:text="@string/to_get_started_n_watch_the_video_below"
            android:textAlignment="center"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="RtlHardcoded" />

        <VideoView
            android:layout_width="250dp"
            android:layout_height="170dp"
            android:layout_below="@+id/get_started_top"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-90dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="end"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/btn_get_started"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/title_activity_get_started"
                    android:textColor="@color/colorIcons" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="-30dp"
                    android:src="@drawable/ic_navigate_next_white_24dp"
                    android:contentDescription="@string/todo" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>
